# desktop

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Taskfile.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/web/: App.tsx  index.css
apps/web/client/: package.json  vite.config.ts
apps/web/client/src/: App.tsx
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  backend_runtime.rs  bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  plugin_host.rs  plugin_routes.rs  routes.rs
apps/web/server/src/handlers/: mod.rs  project_work_contexts.rs  sessions.rs
apps/web/server/src/plugin_api/: mod.rs  scope.rs  security.rs
apps/web/server/src/service/: mod.rs  project.rs  project_work_context.rs  session.rs  task.rs
apps/web/server/tests/: backend_runtime_windows_e2e.rs
crates/acp/: Cargo.toml
crates/acp/src/: peer.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/project/: handlers.rs  id_generator.rs  mapper.rs  mod.rs  ports.rs  tests.rs
crates/application/src/project_work_context/: handlers.rs  id_generator.rs  mapper.rs  mod.rs  ports.rs  tests.rs
crates/backend/: Cargo.toml
crates/backend/src/agent_runtime/: actor.rs  mod.rs  paths.rs  stream.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: frontend.rs  lib.rs  plugin.rs  project.rs  project_work_context.rs  session.rs  task.rs
crates/contracts/src/acp/: authentication.rs  common.rs  initialization.rs  mcp.rs  mod.rs  session.rs
crates/db/: Cargo.toml
crates/db/src/: bootstrap.rs  error.rs  lib.rs  location.rs  repository_tests.rs  tests.rs  time.rs
crates/db/src/migration/: catalog.rs  mod.rs  record.rs  runner.rs  schema_v0001.rs  schema_v0002.rs
crates/db/src/repository/: mod.rs  project_work_context.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  ids.rs  lib.rs  project_work_context.rs  tests.rs
crates/logging/src/: config.rs  init.rs  macros.rs
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/examples/: demo_ipc.rs
crates/plugin-manager/src/: candidate_authority.rs  catalog.rs  config.rs  discovery.rs  enablement.rs  error.rs  events.rs  lease.rs  lib.rs  persistence.rs  ports.rs  registry.rs  runtime.rs  runtime_events.rs  safe_fs.rs  scanner.rs  service.rs  state.rs  validation.rs
crates/plugin-manager/src/install/: digest.rs  mod.rs  pipeline.rs  receipt.rs  reconcile.rs
crates/plugin-manager/src/runtime/: actor.rs  assets.rs  facade.rs  generation.rs  handshake.rs  hub.rs  invocation.rs  mod.rs  outcome.rs  pending.rs  session_actor.rs  startup.rs  state.rs  supervisor.rs  tests.rs  transport.rs
crates/plugin-manager/src/transport/: frame.rs  mod.rs  reader.rs  writer.rs
crates/plugin-manager/tests/: management_e2e.rs  plugin_library_e2e.rs  runtime_windows_e2e.rs
crates/plugin-manager/tests/support/: mod.rs
crates/plugin-protocol/: Cargo.toml
crates/plugin-protocol/fixtures/v1/: agent-contract-golden.json  frame-golden.json
crates/plugin-protocol/src/: agent.rs  fixtures.rs  frame.rs  identity.rs  json_rpc.rs  lib.rs  lifecycle.rs  limits.rs  manifest.rs  strict_json.rs
crates/plugin-protocol/src/agent/: dto.rs  leaf.rs  method.rs  mod.rs  validation.rs
crates/plugin-protocol/tests/: golden_fixtures.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs  spec.rs  tokio_process.rs  traits.rs  tree.rs  windows_tree.rs
crates/process/src/windows_tree/: command.rs  pipes.rs  tests.rs
crates/process/tests/: process.rs
docs/: application-contracts.md  database-migrations.md  web-server-runtime.md
docs/plugin-management/: design-v3.md  implementation-plan.md
examples/demo-plugin/: index.ts
openspec/changes/archive/2026-05-08-add-database-migration-runner/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-add-database-migration-runner/specs/database-migrations/: spec.md
openspec/changes/archive/2026-05-09-add-project-application-contracts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-add-project-application-contracts/specs/app-contracts/: spec.md
openspec/changes/archive/2026-05-09-add-project-application-contracts/specs/application-handlers/: spec.md
openspec/changes/archive/2026-05-17-add-project-work-contexts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-17-add-project-work-contexts/specs/project-work-contexts/: spec.md
openspec/changes/archive/2026-05-27-use-ora-data-dir/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/specs/app-contracts/: spec.md
openspec/specs/application-handlers/: spec.md
openspec/specs/database-migrations/: spec.md
openspec/specs/project-work-contexts/: spec.md
openspec/specs/web-server-runtime/: spec.md
runtime-assets/: README.md  bun-source-v1.json  empty-bunfig.toml
scripts/: prepare-plugin-runtime.ps1
xtask/: Cargo.toml
xtask/src/: export_contracts.rs  export_plugin_sdk.rs  lib.rs  main.rs
