[package]
name = "xtask"
version.workspace = true
edition.workspace = true

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ora-contracts = { workspace = true }
ora-plugin-protocol = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
