[package]
name = "ora-acp"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_acp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }
ora-contracts = { workspace = true }
ora-logging = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt", "sync"] }
tracing = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
