[package]
name = "ora-backend"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_backend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gitlancer = { workspace = true }
ora-acp = { workspace = true }
ora-application = { workspace = true }
ora-contracts = { workspace = true }
ora-db = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
ora-process = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
