[package]
name = "ora-contracts"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_contracts"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ora-plugin-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, features = ["format"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
