[package]
name = "ora-db"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
