[package]
name = "ora-plugin-protocol"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_plugin_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
