[package]
name = "ora-process"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_process"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "sync"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true }
