[package]
name = "ora-web-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ora_web_server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
ora-application = { workspace = true }
ora-backend = { workspace = true }
ora-db = { workspace = true }
ora-contracts = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
ora-plugin-manager = { workspace = true }
ora-process = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
pretty_assertions = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
